--- a/blogpost.html
+++ b/blogpost.html
@@ -5,10 +5,14 @@
     </head>
     <body>
         <div id="container"></div>
+        <div id=cabecera>
+            cabecera
+        </div>
             <div id="post"></div>
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puedan hacer con ramas</p>
             </div>
+        
         </div>
 
     </body>
