--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container"></div>
         <div id=cabecera>
+            aaa
             cabecera
         </div>
             <div id="post"></div>
